examples/datalog/21_query_features/56_nested_derived.dl
% Test: Nested derived relations
% Expected: Rule depends on another rule
% Category: 21_query_features
% Priority: P2 - Query features

.kg create test_nested
.kg use test_nested

+base[(1, 10), (2, 20), (3, 30)].

% First derived
+doubled(Id, D) :- base(Id, V), D = V * 2.

% Second derived (uses first)
+quadrupled(Id, Q) :- doubled(Id, D), Q = D * 2.

?- doubled(Id, D).
?- quadrupled(Id, Q).

.kg use default
.kg drop test_nested
